# harness-core

./: .bazelproject  .bazelproject-config  .bazelproject-delegate  .bazelrc.common  .bazelrc.local  .bazelrc.remote  .clang-format  .deepsource.toml  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .inferconfig  .license-header-apache.txt  .license-header-polyform.txt  .mailmap  .source-available-files.txt  .ticonfig.yaml  0001-uckus-Fetch-files-by-path-generate-HelmDeploySpec-fr.patch  BUILD.bazel  Bazel_run_260_delegate_module.xml  Bazel_run_71_rest_module.xml  CODEOWNERS  GenTestRules.bzl  License.md  Notification Client.xml  Notification Microservice.xml  Pipeline Microservice.xml  README  README.md  WORKSPACE  WingsApp.xml  bazelrc.common  bazelrc.coverage  bazelrc.local  bazelrc.remote  bazelrc_ci_ovh_remote_cache.remote  bolt.db  buf.yaml  build-properties.bzl  (+25 more)
.aeriform/: BUILD.bazel
001-microservice-intfc-tool/: BUILD.bazel  pom.xml
100-migrator/: BUILD.bazel  config.yml  newrelic.yml  pom.xml
100-migrator/chart/: Chart.yaml  README.md  values.yaml
100-migrator/chart/templates/: _helpers.tpl  config.yaml  deployment.yaml  external-secret.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  virtualservice.yaml
100-migrator/config/: manifest.yaml
100-migrator/container/: BUILD.bazel
100-migrator/container/scripts/: replace_configs.sh  replace_hazelcast.sh  run.sh  set_default_variables.sh  start_process.sh
100-migrator/src/main/resources/: modified_config.yml
11-commons-test/: .gitignore  BUILD.bazel  GenTestRules.bzl  pom.xml
11-commons-test/src/main/resources/: BUILD.bazel  logback-test.xml  secrets.properties
110-change-data-capture/: .gitignore  BUILD.bazel  README.md  config.yml  docker-compose.yml  pom.xml
110-change-data-capture/chart/: Chart.yaml  README.md  values.yaml
110-change-data-capture/chart/templates/: _helpers.tpl  config.yaml  deployment.yaml  external-secret.yaml  pdb.yaml  secret.yaml
110-change-data-capture/config/: manifest.yaml
110-change-data-capture/container/: BUILD.bazel
110-change-data-capture/container/scripts/: replace_configs.sh  run.sh  start_process.sh
110-change-data-capture/src/main/resources/: logback.xml
110-change-data-capture/src/test/resources/: cdpipeline_execution_summary.json  cdpipeline_execution_summary_gitops.json  cdpipeline_execution_summary_with_ci.json  cdpipeline_execution_summary_with_empty_ci.json  harness_approval_step_execution_entity.json  harness_approval_step_execution_entity_failed.json  jira_approval_step_execution_entity.json  jira_create_step_execution_entity.json  jira_update_step_execution_entity.json  pipeline.json  stage_execution_entity.json  stage_execution_info.json  stage_execution_info_with_multiple_manifest.json  stage_execution_info_with_no_helm_manifest.json  stage_execution_info_with_one_helm_manifest.json  step_execution_entity.json
12-commons/: .gitignore  BUILD.bazel  pom.xml
12-commons/src/main/resources/: BUILD.bazel  response_messages.properties  test_public_key.base64
12-commons/src/main/resources-filtered/: BUILD.bazel
12-commons/src/test/resources/: pipeline.yml
120-ng-manager/: .gitignore  BUILD.bazel  config.yml  keystore.jks  oidc_config.json  pom.xml
120-ng-manager/chart/: Chart.yaml  README.md  values.yaml
120-ng-manager/chart/charts/: harness-common-1.2.0.tgz
120-ng-manager/chart/templates/: _helpers.tpl  config.yaml  deployment.yaml  external-secret.yaml  externalsecret.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  virtualservice.yaml
120-ng-manager/config/: manifest.yaml
120-ng-manager/container/: BUILD.bazel
120-ng-manager/container/scripts/: replace_configs.sh  start_process.sh
120-ng-manager/contracts/openapi/v1/: BUILD.bazel  openapi.yaml
120-ng-manager/modules/ip-allowlist/: BUILD.bazel
120-ng-manager/modules/ip-allowlist/contracts/: BUILD.bazel
120-ng-manager/modules/ldap/: BUILD.bazel
120-ng-manager/modules/ldap/contracts/: BUILD.bazel
120-ng-manager/modules/ng-settings/: BUILD.bazel
120-ng-manager/modules/ng-settings/contracts/: BUILD.bazel
120-ng-manager/modules/ng-variables/: BUILD.bazel
120-ng-manager/modules/ng-variables/contracts/: BUILD.bazel
120-ng-manager/src/main/resources/: dummyInputSetTemplate.yaml  enterprise-redisson-jcache.yaml  outputResourceTypes.json  outputSchemas.json  outputServiceConfigProvider.json
120-ng-manager/src/test/resources/: InfraYamlWithIncorrectDeploymentType.yaml  ManifestYamlWithoutSpec.yaml  grpc-server-config.yml  input-set-test-file.yaml  k8sPipeline.yaml  k8sWithoutArtifact.yaml  pipeline.yaml  resolved-pipeline.json  resolved-pipeline.yaml  test-config.yml
121-access-control-migration/: .gitignore  BUILD.bazel
121-instance/: BUILD.bazel  pom.xml
122-ng-authentication-settings/: .gitignore  BUILD.bazel
122-ng-core-user/: .gitignore  BUILD.bazel
123-ng-core-user/: .gitignore  BUILD.bazel
125-cd-nextgen/: .gitignore  BUILD.bazel  pom.xml
125-cd-nextgen/src/test/resources/: ServiceInputs.yaml  ServiceWithArtifactSources.yaml  ServiceWithArtifactSourcesButFixedPrimaryRef.yaml  connector-ref-input-set.yaml  connectorRef-pipeline.yaml  deployStageWithEnvironmentAndProvisioner.yaml  (+39 more)
125-freeze/: BUILD.bazel
126-instance/: BUILD.bazel  pom.xml
127-cd-nextgen-beans/: BUILD.bazel  pom.xml
127-cd-nextgen-entities/: BUILD.bazel
13-grpc-api/: .gitignore  BUILD.bazel  pom.xml
130-resource-group/: .gitignore  BUILD.bazel  pom.xml
136-git-sync-manager/: .gitignore  BUILD.bazel  pom.xml
14-api-services-beans/: .gitignore  BUILD.bazel  pom.xml
15-api-services/: .gitignore  BUILD.bazel  pom.xml
16-expression-service/: .gitignore  BUILD.bazel  pom.xml
160-model-gen-tool/: .gitignore  BUILD.bazel  config-datagen.yml  pom.xml
160-stress-tester/: BUILD.bazel  config.yml
19-delegate-tasks-beans/: .gitignore  BUILD.bazel  pom.xml
190-deployment-functional-tests/: .gitignore  BUILD.bazel  pom.xml
20-delegate-beans/: .gitignore  BUILD.bazel  pom.xml
20-delegate-tasks/: .gitignore  BUILD.bazel  pom.xml
(+81503 files in other folders)
