########################################################################################################
####################################################  Go Starts Here    ####################################################
########################################################################################################

# Refer for a list of all gazelle directives: http://www.lib4dev.in/info/bazelbuild/bazel-gazelle/112655189
# gazelle:exclude src/vendor
# gazelle:exclude vendor
# gazelle:exclude build
# gazelle:exclude */target
# gazelle:exclude {990-commons-test,980-commons,970-grpc,970-api-services-beans,965-git-sync-commons,960-notification-beans,950-timeout-engine,950-delegate-tasks-beans,22-ng-delegate-service-beans,24-manager-delegate-service-beans,24-ng-manager-service-beans,890-pms-contracts,400-rest,460-capability,160-stress-tester}

# gazelle:exclude .git/
# gazelle:exclude pkg/
## gazelle:proto_strip_import_prefix /proto/harness.io/

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/wings-software/portal
gazelle(name = "gazelle")

load("@io_bazel_rules_go//go:def.bzl", "nogo")

buildifier(
    name = "buildifier",
)

nogo(
    name = "nogo_vet",
    vet = True,
    visibility = ["//visibility:public"],
)

########################################################################################################
####################################################  JAVA Starts Here    ####################################################
########################################################################################################

load("//tools/bazel/sonarqube:defs.bzl", "sonarqube")
load("//tools/bazel/sonarqube:defs.bzl", "get_sonar_targets")

java_plugin(
    name = "lombok_plugin",
    processor_class = "lombok.launch.AnnotationProcessorHider$AnnotationProcessor",
    visibility = ["//visibility:public"],
    deps = ["@maven//:org_projectlombok_lombok"],
)

java_library(
    name = "lombok",
    exported_plugins = [":lombok_plugin"],
    visibility = ["//visibility:public"],
    exports = ["@maven//:org_projectlombok_lombok"],
)

modules = [
    "//110-change-data-capture",
    "//120-ng-manager",
    "//125-cd-nextgen",
    "//136-git-sync-manager",
    "//160-model-gen-tool",
    "//160-stress-tester",
    #"//190-deployment-functional-tests",
    "//200-functional-test",
    "//210-command-library-server",
    #"//220-graphql-test",
    "//230-model-test",
    "//250-watcher",
    "//260-delegate",
    "//270-verification",
    "//280-batch-processing",
    "//300-cv-nextgen",
    "//310-ci-manager",
    "//320-ci-execution",
    "//330-ci-beans",
    #"//340-ce-nextgen",
    "//350-event-server",
    "//360-cg-manager",
    "//375-ce-graphql",
    "//380-cg-graphql",
    "//390-db-migration",
    "//400-rest",
    "//410-cg-rest",
    "//420-delegate-agent",
    "//420-delegate-service",
    "//430-cv-nextgen-commons",
    "//440-connector-nextgen",
    "//445-cg-connectors",
    "//450-ce-views",
    "//460-capability",
    "//470-alert",
    "//490-ce-commons",
    "//800-pipeline-service",
    "//810-ng-triggers",
    "//815-cg-triggers",
    "//820-platform-service",
    "//830-notification-service",
    "//830-resource-group",
    "//835-notification-senders",
    "//850-execution-plan",
    "//850-ng-pipeline-commons",
    "//860-orchestration-steps",
    "//860-orchestration-visualization",
    #"//861-cg-orchestration-states",
    "//870-cg-orchestration",
    "//870-cg-yaml-beans",
    "//870-orchestration",
    "//870-yaml-beans",
    "//871-cg-beans",
    "//874-orchestration-delay",
    "//876-orchestration-beans",
    "//878-pipeline-service-utilities",
    "//879-pms-sdk",
    "//882-pms-sdk-core",
    "//884-pms-commons",
    "//888-pms-client",
    "//890-pms-contracts",
    "//890-sm-core",
    "//910-delegate-service-driver",
    "//910-delegate-task-grpc-service",
    "//920-delegate-agent-beans",
    "//920-delegate-service-beans",
    "//920-ng-signup",
    "//925-access-control-service",
    "//930-delegate-tasks",
    "//930-ng-core-clients",
    "//940-cg-audit-service",
    "//940-feature-flag",
    "//940-ng-audit-service",
    "//940-notification-client",
    "//940-resource-group-beans",
    "//940-secret-manager-client",
    "//945-ng-audit-client",
    "//946-access-control-aggregator",
    "//946-access-control-decision",
    "//947-access-control-core",
    "//947-access-control-decision-commons",
    "//948-access-control-admin-client",
    "//948-access-control-sdk",
    "//949-access-control-commons",
    "//949-git-sync-sdk",
    "//950-cg-ng-shared-orchestration-beans",
    "//950-command-library-common",
    "//950-common-entities",
    "//950-delegate-tasks-beans",
    "//950-events-framework",
    "//950-log-client",
    "//950-ng-audit-commons",
    "//950-ng-authentication-service",
    "//950-ng-core",
    "//950-ng-project-n-orgs",
    "//950-telemetry",
    "//950-timeout-engine",
    "//950-wait-engine",
    "//950-walktree-visitor",
    "//952-scm-java-client",
    "//953-events-api",
    "//953-git-sync-commons",
    "//954-connector-beans",
    "//955-account-mgmt",
    "//955-alert-beans",
    "//955-delegate-beans",
    "//955-filters-sdk",
    "//955-outbox-sdk",
    "//955-setup-usage-sdk",
    "//958-migration-sdk",
    "//959-psql-database-models",
    "//960-api-services",
    "//960-continuous-features",
    "//960-expression-service",
    "//960-ng-core-beans",
    "//960-notification-beans",
    "//960-persistence",
    "//960-recaster",
    "//960-yaml-sdk",
    "//970-api-services-beans",
    "//970-grpc",
    "//970-ng-commons",
    "//970-rbac-core",
    "//970-telemetry-beans",
    "//980-commons",
    "//990-commons-test",
]

filegroup(
    name = "git",
    srcs = glob(
        [".git/**/*"],
        exclude = [".git/**/*[*"],  # gitk creates temp files with []
    ),
    tags = ["manual"],
)

filegroup(
    name = "coverage_report",
    srcs = ["bazel-out/_coverage/_coverage_report.dat"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test_reports",
    srcs = glob(["bazel-testlogs/**/test.xml"]),
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

sonarqube(
    name = "sq",
    srcs = [],
    coverage_report = ":coverage_report",
    modules = get_sonar_targets(modules),
    project_key = "portal_bazel",
    project_name = "Bazel Portal",
    scm_info = [":git"],
    tags = ["manual"],
    targets = [],
)

filegroup(
    name = "resource",
    srcs = [
        "cert.pem",
        "key.pem",
        "keystore.jks",
    ],
    visibility = ["//visibility:public"],
)
