exports_files([
    "tools/bazel/signer.sh",
])

########################################################################################################
####################################################  Go Starts Here    ####################################################
########################################################################################################

# Refer for a list of all gazelle directives: http://www.lib4dev.in/info/bazelbuild/bazel-gazelle/112655189
# gazelle:exclude src/vendor
# gazelle:exclude vendor
# gazelle:exclude build
# gazelle:exclude */target
# gazelle:exclude {990-commons-test,970-grpc,970-api-services-beans,960-notification-beans,959-timeout-engine,953-git-sync-commons,959-timeout-engine,950-timeout-engine,950-delegate-tasks-beans,950-wait-engine,867-polling-contracts,22-ng-delegate-service-beans,24-manager-delegate-service-beans,24-ng-manager-service-beans,890-pms-contracts,400-rest,460-capability,160-stress-tester}

# gazelle:exclude .git/
# gazelle:exclude pkg/
## gazelle:proto_strip_import_prefix /proto/harness.io/

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/wings-software/portal
gazelle(name = "gazelle")

load("@io_bazel_rules_go//go:def.bzl", "nogo")

buildifier(
    name = "buildifier",
)

nogo(
    name = "nogo_vet",
    vet = True,
    visibility = ["//visibility:public"],
)

########################################################################################################
####################################################  JAVA Starts Here    ####################################################
########################################################################################################

java_plugin(
    name = "lombok_plugin",
    processor_class = "lombok.launch.AnnotationProcessorHider$AnnotationProcessor",
    visibility = ["//visibility:public"],
    deps = ["@maven//:org_projectlombok_lombok"],
)

java_library(
    name = "lombok",
    exported_plugins = [":lombok_plugin"],
    visibility = ["//visibility:public"],
    exports = ["@maven//:org_projectlombok_lombok"],
)

filegroup(
    name = "git",
    srcs = glob(
        [".git/**/*"],
        exclude = [".git/**/*[*"],  # gitk creates temp files with []
    ),
    tags = ["manual"],
)

filegroup(
    name = "coverage_report",
    srcs = ["bazel-out/_coverage/_coverage_report.dat"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test_reports",
    srcs = glob(["bazel-testlogs/**/test.xml"]),
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

load("//tools/bazel/sonarqube:defs.bzl", "sonarqube")
load("//project/flags:sonarqube_targets.bzl", "get_sonarqube_targets")

sonarqube(
    name = "sq",
    srcs = [],
    coverage_report = ":coverage_report",
    modules = get_sonarqube_targets(),
    project_key = "portal_bazel",
    project_name = "Bazel Portal",
    scm_info = [":git"],
    tags = ["manual"],
    targets = [],
)

filegroup(
    name = "resource",
    srcs = [
        "cert.pem",
        "key.pem",
        "keystore.jks",
    ],
    visibility = ["//visibility:public"],
)

load("@rules_python//python:defs.bzl", "py_runtime", "py_runtime_pair")

py_runtime(
    name = "python3_runtime",
    files = ["@python_interpreter//:files"],
    interpreter = "@python_interpreter//:python_bin",
    python_version = "PY3",
    visibility = ["//visibility:public"],
)

py_runtime_pair(
    name = "py_runtime_pair",
    py2_runtime = None,
    py3_runtime = ":python3_runtime",
)

toolchain(
    name = "py_toolchain",
    toolchain = ":py_runtime_pair",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "alpn_boot_8.1.13.v20181017_tar",
    files = {
        "@alpn_boot_8.1.13.v20181017//file": "alpn-boot-8.1.13.v20181017.jar",
    },
    mode = "0644",
    package_dir = "/opt/harness-delegate",
    tags = [
        "manual",
        "no-cache",
        "no-ide",
    ],
    visibility = ["//visibility:public"],
)
