load("//:tools/bazel/aeriform.bzl", "aeriform")

aeriform("//001-microservice-intfc-tool:module")

aeriform("//100-migrator:module")

aeriform("//110-change-data-capture:module")

aeriform("//120-ng-manager:module")

aeriform("//120-ng-manager:tests")

aeriform("//122-ng-authentication-settings:module")

aeriform("//123-ng-core-user:module")

aeriform("//123-ng-core-user:tests")

aeriform("//125-cd-nextgen:module")

aeriform("//125-cd-nextgen:tests")

aeriform("//126-instance:module")

aeriform("//126-instance:tests")

aeriform("//127-cd-nextgen-beans:module")

aeriform("//136-git-sync-manager:module")

aeriform("//136-git-sync-manager:tests")

aeriform("//160-model-gen-tool:module")

aeriform("//160-stress-tester:module")

aeriform("//190-deployment-functional-tests:tests")

aeriform("//200-functional-test:module")

aeriform("//200-functional-test:tests")

aeriform("//210-command-library-server:module")

aeriform("//210-command-library-server:tests")

aeriform("//220-graphql-test:supporter-test")

aeriform("//220-graphql-test:tests")

aeriform("//230-model-test:module")

aeriform("//260-delegate:module")

aeriform("//260-delegate:tests")

aeriform("//270-delegate-service-app:module")

aeriform("//270-delegate-service-app:tests")

aeriform("//270-verification:module")

aeriform("//270-verification:tests")

aeriform("//280-batch-processing:module")

aeriform("//280-batch-processing:supporter-test")

aeriform("//280-batch-processing:tests")

aeriform("//290-dashboard-service:module")

aeriform("//290-dashboard-service:tests")

aeriform("//293-cdng-clients:module")

aeriform("//295-cdng-contracts:module")

aeriform("//300-cv-nextgen:module")

aeriform("//300-cv-nextgen:tests")

aeriform("//310-ci-manager:module")

aeriform("//310-ci-manager:tests")

aeriform("//320-ci-execution:module")

aeriform("//320-ci-execution:tests")

aeriform("//330-ci-beans:module")

aeriform("//330-ci-beans:tests")

aeriform("//340-ce-nextgen:module")

aeriform("//340-ce-nextgen:tests")

aeriform("//350-event-server:module")

aeriform("//350-event-server:tests")

aeriform("//360-cg-manager:module")

aeriform("//374-ceng-graphql:module")

aeriform("//374-ceng-graphql:tests")

aeriform("//375-ce-graphql:module")

aeriform("//375-ce-graphql:tests")

aeriform("//380-cg-graphql:module")

aeriform("//380-cg-graphql:tests")

aeriform("//390-db-migration:module")

aeriform("//390-db-migration:tests")

aeriform("//400-rest:module")

aeriform("//400-rest:supporter-test")

aeriform("//400-rest:tests")

aeriform("//410-cg-rest:module")

aeriform("//420-delegate-agent:module")

aeriform("//420-delegate-service:module")

aeriform("//420-delegate-service:tests")

aeriform("//425-verification-commons:module")

aeriform("//425-verification-commons:tests")

aeriform("//430-cv-nextgen-commons:module")

aeriform("//430-cv-nextgen-commons:tests")

aeriform("//440-connector-nextgen:module")

aeriform("//440-connector-nextgen:tests")

aeriform("//440-secret-management-service:module")

aeriform("//441-cg-instance-sync:module")

aeriform("//445-cg-connectors:module")

aeriform("//445-gitops:module")

aeriform("//445-gitops:tests")

aeriform("//450-ce-views:module")

aeriform("//450-ce-views:tests")

aeriform("//460-capability:module")

aeriform("//460-capability:tests")

aeriform("//470-alert:module")

aeriform("//480-pricing-service:module")

aeriform("//490-ce-commons:module")

aeriform("//490-ce-commons:tests")

aeriform("//800-pipeline-service:module")

aeriform("//800-pipeline-service:tests")

aeriform("//810-ng-triggers:module")

aeriform("//810-ng-triggers:tests")

aeriform("//815-cg-triggers:module")

aeriform("//820-platform-service:module")

aeriform("//820-platform-service:tests")

aeriform("//830-notification-service:module")

aeriform("//830-notification-service:tests")

aeriform("//830-resource-group:module")

aeriform("//830-resource-group:tests")

aeriform("//835-notification-senders:module")

aeriform("//840-template-service:module")

aeriform("//840-template-service:tests")

aeriform("//860-orchestration-steps:module")

aeriform("//860-orchestration-steps:tests")

aeriform("//860-orchestration-visualization:module")

aeriform("//860-orchestration-visualization:tests")

aeriform("//865-cg-events:module")

aeriform("//865-cg-events:tests")

aeriform("//867-polling-contracts:module")

aeriform("//870-cg-orchestration:module")

aeriform("//870-cg-orchestration:tests")

aeriform("//870-orchestration:module")

aeriform("//870-orchestration:tests")

aeriform("//874-orchestration-delay:module")

aeriform("//876-orchestration-beans:module")

aeriform("//876-orchestration-beans:tests")

aeriform("//878-pipeline-service-utilities:module")

aeriform("//878-pipeline-service-utilities:tests")

aeriform("//879-pms-sdk:module")

aeriform("//879-pms-sdk:tests")

aeriform("//882-pms-sdk-core:module")

aeriform("//882-pms-sdk-core:supporter-test")

aeriform("//882-pms-sdk-core:tests")

aeriform("//884-pms-commons:module")

aeriform("//884-pms-commons:tests")

aeriform("//888-pms-client:module")

aeriform("//889-yaml-commons:module")

aeriform("//889-yaml-commons:tests")

aeriform("//890-pms-contracts:module")

aeriform("//890-sm-core:module")

aeriform("//890-sm-core:tests")

aeriform("//900-git-sync-sdk:module")

aeriform("//900-git-sync-sdk:tests")

aeriform("//910-delegate-service-driver:module")

aeriform("//910-delegate-service-driver:tests")

aeriform("//910-delegate-task-grpc-service:module")

aeriform("//910-delegate-task-grpc-service:tests")

aeriform("//920-delegate-agent-beans:module")

aeriform("//920-delegate-agent-beans:tests")

aeriform("//920-delegate-service-beans:module")

aeriform("//920-ng-signup:module")

aeriform("//920-ng-signup:tests")

aeriform("//925-access-control-service:module")

aeriform("//925-access-control-service:tests")

aeriform("//925-enforcement-service:module")

aeriform("//925-enforcement-service:tests")

aeriform("//930-delegate-tasks:module")

aeriform("//930-delegate-tasks:tests")

aeriform("//930-ng-core-clients:module")

aeriform("//930-ng-license-manager:module")

aeriform("//930-ng-license-manager:tests")

aeriform("//932-connector-task:module")

aeriform("//935-analyser-service:module")

aeriform("//935-subscription-sdk:module")

aeriform("//937-persistence-tracer:module")

aeriform("//937-persistence-tracer:tests")

aeriform("//940-cg-audit-service:module")

aeriform("//940-cg-audit-service:tests")

aeriform("//940-feature-flag:module")

aeriform("//940-feature-flag:tests")

aeriform("//940-ng-audit-service:module")

aeriform("//940-ng-audit-service:tests")

aeriform("//940-notification-client:module")

aeriform("//940-primary-version-manager:module")

aeriform("//940-primary-version-manager:tests")

aeriform("//940-resource-group-beans:module")

aeriform("//940-secret-manager-client:module")

aeriform("//942-enforcement-sdk:module")

aeriform("//943-enforcement-beans:module")

aeriform("//945-account-mgmt:module")

aeriform("//945-license-usage-sdk:module")

aeriform("//945-ng-audit-client:module")

aeriform("//945-ng-audit-client:tests")

aeriform("//946-access-control-aggregator:module")

aeriform("//946-access-control-aggregator:tests")

aeriform("//947-access-control-core:module")

aeriform("//947-access-control-core:tests")

aeriform("//947-scim-core:module")

aeriform("//948-access-control-admin-client:module")

aeriform("//948-access-control-sdk:module")

aeriform("//948-access-control-sdk:tests")

aeriform("//949-access-control-commons:module")

aeriform("//950-command-library-common:module")

aeriform("//950-delegate-tasks-beans:module")

aeriform("//950-delegate-tasks-beans:tests")

aeriform("//950-events-framework-monitor:module")

aeriform("//950-events-framework:module")

aeriform("//950-events-framework:tests")

aeriform("//950-log-client:module")

aeriform("//950-log-client:tests")

aeriform("//950-ng-authentication-service:module")

aeriform("//950-ng-core:module")

aeriform("//950-ng-core:tests")

aeriform("//950-ng-project-n-orgs:module")

aeriform("//950-ng-project-n-orgs:tests")

aeriform("//950-ng-signup-beans:module")

aeriform("//950-opa-client:module")

aeriform("//950-opa-client:tests")

aeriform("//950-telemetry:module")

aeriform("//950-telemetry:tests")

aeriform("//950-wait-engine:module")

aeriform("//950-wait-engine:supporter-test")

aeriform("//950-wait-engine:tests")

aeriform("//950-walktree-visitor:module")

aeriform("//950-walktree-visitor:tests")

aeriform("//951-cg-git-sync:module")

aeriform("//951-ng-audit-commons:module")

aeriform("//952-scm-java-client:module")

aeriform("//952-scm-java-client:tests")

aeriform("//953-events-api:module")

aeriform("//953-events-api:tests")

aeriform("//953-git-sync-commons:module")

aeriform("//954-connector-beans:module")

aeriform("//954-connector-beans:tests")

aeriform("//954-feature-flag-sdk:module")

aeriform("//955-alert-beans:module")

aeriform("//955-cg-yaml:module")

aeriform("//955-delegate-beans:module")

aeriform("//955-filters-sdk:module")

aeriform("//955-filters-sdk:tests")

aeriform("//955-outbox-sdk:module")

aeriform("//955-outbox-sdk:tests")

aeriform("//955-setup-usage-sdk:module")

aeriform("//955-setup-usage-sdk:tests")

aeriform("//956-feature-flag-beans:module")

aeriform("//957-cg-beans:module")

aeriform("//958-migration-sdk:module")

aeriform("//958-migration-sdk:tests")

aeriform("//958-ng-file-service-sdk:module")

aeriform("//959-common-entities:module")

aeriform("//959-file-service-commons:module")

aeriform("//959-psql-database-models:module")

aeriform("//959-psql-database-models:tests")

aeriform("//959-timeout-engine:module")

aeriform("//959-timeout-engine:tests")

aeriform("//960-api-services:module")

aeriform("//960-api-services:tests")

aeriform("//960-continuous-features:module")

aeriform("//960-expression-service:module")

aeriform("//960-expression-service:tests")

aeriform("//960-ng-core-beans:module")

aeriform("//960-ng-license-beans:module")

aeriform("//960-ng-license-usage-beans:module")

aeriform("//960-notification-beans:module")

aeriform("//960-persistence:module")

aeriform("//960-persistence:supporter-test")

aeriform("//960-persistence:tests")

aeriform("//960-watcher:module")

aeriform("//960-watcher:tests")

aeriform("//960-yaml-sdk:module")

aeriform("//960-yaml-sdk:tests")

aeriform("//965-api-key-filter:module")

aeriform("//965-api-key-filter:tests")

aeriform("//970-api-services-beans:module")

aeriform("//970-api-services-beans:tests")

aeriform("//970-grpc:module")

aeriform("//970-grpc:tests")

aeriform("//970-ng-commons:module")

aeriform("//970-ng-commons:tests")

aeriform("//970-rbac-core:module")

aeriform("//970-telemetry-beans:module")

aeriform("//970-watcher-beans:module")

aeriform("//980-commons:module")

aeriform("//980-commons:tests")

aeriform("//980-recaster:module")

aeriform("//980-recaster:tests")

aeriform("//990-commons-test:abstract-module")

aeriform("//990-commons-test:module")

aeriform("//990-commons-test:tests")

aeriform("//999-annotations:module")
