load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.harness.MicroserviceInterfaceTool",
    visibility = ["//visibility:public"],
    deps = [
        "//920-delegate-agent-beans:module",
        "//950-delegate-tasks-beans:module",
        "//959-file-service-commons:module",
        "//970-ng-commons:module",
        "//970-watcher-beans:module",
        "//980-commons:module",
        "//999-annotations:module",
    ],
)
